--- a/css/style.css
+++ b/css/style.css
@@ -41,7 +41,6 @@ h1 {
 .photographer_section article h2 {
   color: #d3573c;
   font-size: 36px;
-  margin-bottom: 0px;
 }
 
 .photographer_section article img {
@@ -54,15 +53,20 @@ h1 {
 .photographer_section article h3 {
   color: #901c1c;
   font-size: 13px;
-  margin-top: 0px;
 }
 .photographer_section article h4 {
   color: #000;
   font-size: 10px;
-  margin-top: 0px;
 }
 .photographer_section article h5 {
   color: #757575;
   font-size: 9px;
-  margin-top: 0px;
+}
+
+.photographer_section article h2,
+h3,
+h4,
+h5 {
+  margin-top: 5px;
+  margin-bottom: 0px;
 }
