--- a/css/photographer.css
+++ b/css/photographer.css
@@ -158,6 +158,9 @@ h5 {
   margin-top: 5px;
   margin-bottom: 0px;
 }
+h5 {
+  z-index: 11;
+}
 .populaire-tarif {
   display: flex;
   position: fixed;
@@ -167,7 +170,7 @@ h5 {
   height: 80px;
   border-radius: 10px 10px 0 0;
   background-color: #db8876;
-  z-index: -1;
+  z-index: 10;
 }
 
 /* Media Section */
@@ -178,7 +181,6 @@ h5 {
   grid-template-columns: repeat(3, 1fr);
 }
 .photograph-media article {
-  z-index: -2;
   width: 300px;
   height: auto;
   margin-bottom: 25px;
@@ -207,4 +209,57 @@ video {
 .like-span {
   gap: 10px;
   font-size: 16px;
+}
+
+/* Lightbox */
+.lightbox {
+  display: none;
+  position: fixed;
+  flex-direction: column;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(145, 145, 145, 0.9);
+  justify-content: center;
+  align-items: center;
+}
+.lightbox-content {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+}
+#lightbox-image {
+  display: none;
+  max-width: 1000px;
+  max-height: 800px;
+  border-radius: 5px;
+}
+#lightbox-video {
+  display: none;
+  width: 100%;
+  height: 80%;
+  border-radius: 5px;
+}
+.fa-solid.fa-angle-left,
+.fa-solid.fa-angle-right {
+  font-size: 60px;
+  color: #901c1c;
+  cursor: pointer;
+}
+.closeLightbox {
+  width: 30px;
+  height: 30px;
+  position: absolute;
+  right: 50px;
+  top: 40px;
+  filter: brightness(0) saturate(100%) invert(18%) sepia(97%) saturate(1915%)
+    hue-rotate(349deg) brightness(79%) contrast(89%);
+  cursor: pointer;
+}
+#lightboxTitle {
+  margin-top: 10px;
+  font-size: 25px;
+  color: #901c1c;
 }
