--- a/css/photographer.css
+++ b/css/photographer.css
@@ -260,7 +260,7 @@ video {
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(145, 145, 145, 0.9);
+  background-color: rgb(255, 255, 255);
   justify-content: center;
   align-items: center;
 }
